--- a/index.html
+++ b/index.html
@@ -6,14 +6,66 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+
   <div class="clock">
     <div class="clock-face">
       <div class="hand hour-hand"></div>
       <div class="hand minute-hand"></div>
       <div class="hand second-hand"></div>
     </div>
+    <div class="hour-marker"></div>
   </div>
+
+<script>
+  const secondHand = document.querySelector('.second-hand');
+  const minuteHand = document.querySelector('.minute-hand');
+  const hourHand = document.querySelector('.hour-hand');
+
+  function setDate() {
+    const now = new Date();
+
+    const seconds = now.getSeconds();
+    const secondsDegrees = ((seconds / 60) * 360);
+
+    if( secondsDegrees != 0 ) {
+      secondHand.style.transition = 'all 0.1s';
+      secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
+    }
+    else {
+      secondHand.style.transition = 'none';
+      secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
+    }
+
+    const minutes = now.getMinutes();
+    const minutesDegrees = ((minutes / 60) * 360) + ((seconds / 60) * 6);
+
+    if( minutesDegrees != 0 ) {
+      minuteHand.style.transition = 'all 0.1';
+      minuteHand.style.transform = `rotate(${minutesDegrees}deg)`;
+    }
+    else {
+      minuteHand.style.transition = 'none';
+      minuteHand.style.transform = `rotate(${minutesDegrees}deg)`;
+    }
+
+    const hours = now.getHours();
+    const hoursDegrees = ((hours / 12) * 360) + ((minutes / 60) * 30);
+
+    if( hoursDegrees != 0 ) {
+      hourHand.style.transition = 'all 0.1';
+      hourHand.style.transform = `rotate(${hoursDegrees}deg)`;
+    }
+    else {
+      hourHand.style.transition = 'none';
+      hourHand.style.transform = `rotate(${hoursDegrees}deg)`;
+    }
+  }
+
+  setInterval(setDate, 1000);
+
+  setDate();
+
+</script>
 
 </body>
 <html>
