--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <div class="hand hour-hand"></div>
       <div class="hand minute-hand"></div>
       <div class="hand second-hand"></div>
+      <div class="inner-circle"></div>
     </div>
   </div>
 
